[add] anexos y actualizar pdf

--- a/src/app/compartidos/modal-agregar-anexo/modal-agregar-anexo.component.html
+++ b/src/app/compartidos/modal-agregar-anexo/modal-agregar-anexo.component.html
@@ -1,10 +1,9 @@
 <!-- Modal -->
-<div class="modal fade" id="id_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
+<div class="modal fade" id="modalAnexos" tabindex="-1" role="dialog" aria-labelledby="modalAnexos" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">{{ titulo }}</h5>
+        <h5 class="modal-title" id="exampleModalLabel"> Agregar Anexo </h5>
         <button #btn_cerrar type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -29,7 +28,7 @@
       <div class="modal-footer">
         <button #btn_close type="button" class="btn btn-danger" (click)="cerrarModal()">Cerrar</button>
         <button #btn_actualizar type="button" class="btn btn-primary" [disabled]="archivo == ''"
-          (click)="actualizarDoc()">Actualizar</button>
+          (click)="actualizarDoc()">Guardar</button>
       </div>
     </div>
   </div>
