--- a/src/app/compartidos/modal-agregar-anexo/modal-agregar-anexo.component.html
+++ b/src/app/compartidos/modal-agregar-anexo/modal-agregar-anexo.component.html
@@ -11,11 +11,11 @@
       <div class="modal-body">
         <div class="row">
           <div class="form-group col-12">
-            <label>PDF <span class="requerido">*</span> </label>
+            <label>Archivo <span class="requerido">*</span> </label>
             <div class="input-group input-file" name="xml_nc">
               <span class="input-group-btn">
                 <label class="btn btn-block btn-primary">Archivo
-                  <input #input_pdf for="archivo" accept=".pdf,.PDF" type="file" style="display: none;"
+                  <input #input_pdf for="archivo" accept="*.*" type="file" style="display: none;"
                     (change)="cargarArchivo( input_pdf, input_pdf_txt, 'pdf')">
                 </label>
               </span>
