--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -1,18 +1,26 @@
+<div class="row">
+  <div class="col">
+    <div class="switcher p-t-10">
+      <input type="checkbox" id="nota_credito" class="ml-5" name="nota_credito"
+        (click)="onTipoDocumentoChange($event.target.checked)">
+      <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
+    </div>
+  </div>
+</div>
+
 <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
-  <form [formGroup]="formulario_header" class="row">
-    <div class="row">
-      <div class="col ">
-        <div class="card border border-info" style="width: auto; height: 100%;">
-          <div class="card-body">
-            <div class="form-row">
+  <div class="row">
+    <div class="col">
+      <div class="card border border-info" style="width: auto; height: 100%;">
+        <div class="card-body">
+          <div class="form-row">
+            <form [formGroup]="formulario_header" class="row">
               <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <label for="unidad_responsable">Unidad Responsable <span class="requerido">*</span> </label>
                 <select2 #selectSucursal [data]="lista_contribuyentes" [options]="{placeholder: ''}"
                   (valueChanged)="onContrbiuyenteSeleccionado($event)" name="unidad_responsable"
                   id="unidad_responsable">
                 </select2>
-                <!-- <input type="text" formControlName="unidad_responsable" class="form-control" id="unidad_responsable"
-                  maxlength="50"> -->
               </div>
               <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <label for="sucursal">Sucursal <span class="requerido">*</span> </label>
@@ -38,34 +46,24 @@
                   (dateChanged)="onFechaRecepcionSelected($event, 'fecha_pago')" required>
                 </my-date-picker>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </form>
 
-  <form class="mt-3" [formGroup]="formulario_documentos">
-    <div class="row">
-      <div class="col-sm-12 col-md-10 col-lg-8">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <div class="form-row">
-              <div class="form-group col-12">
-                <label>XML <span class="requerido">*</span> </label>
-                <div class="input-group input-file" name="xml_nc">
-                  <span class="input-group-btn">
-                    <label class="btn btn-block btn-primary">Archivo
-                      <input #input for="archivo" accept=".xml, .XML" type="file" style="display: none;"
-                        (change)="cargarArchivo( input, input_txt, 'xml')">
-                    </label>
-                  </span>
-                  <input #input_txt type="text" disabled class="form-control" placeholder='' id="archivo"
-                    name="archivo" />
+              <ng-container *ngIf="!documento_papel">
+                <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                  <label>XML <span class="requerido">*</span> </label>
+                  <div class="input-group input-file" name="xml_nc">
+                    <span class="input-group-btn">
+                      <label class="btn btn-block btn-primary">Archivo
+                        <input #input for="archivo" accept=".xml, .XML" type="file" style="display: none;"
+                          (change)="cargarArchivo( input, input_txt, 'xml')">
+                      </label>
+                    </span>
+                    <input #input_txt type="text" disabled class="form-control" placeholder='' id="archivo"
+                      name="archivo" />
+                  </div>
                 </div>
-              </div>
+              </ng-container>
 
-              <div class="form-group col-12">
+              <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
                 <label>PDF <span class="requerido">*</span> </label>
                 <div class="input-group input-file" name="xml_nc">
                   <span class="input-group-btn">
@@ -78,27 +76,42 @@
                     name="archivo" />
                 </div>
               </div>
+            </form>
+            <div *ngIf="!documento_papel" class="form-row">
+              <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" (click)="cargarDocumento()">
+                cargar </button>
             </div>
           </div>
-          <!-- <div *ngIf="usuario.aprobador == 1  && nivel_aprobacion == 1 " class="col-sm-12 col-md-6">
-            <div class="form-row">
-              <div class="form-group col-12">
-                <label for="unidad_responsable">Ingresar Cuenta Contable<span class="requerido">*</span> </label>
-                <input type="text" class="form-control" formControlName="cuenta_contable" id="unidad_responsable"
-                  maxlength="50">
-              </div>
-              <div class="form-group col-12 mt-2">
-                <label for="unidad_responsable">Ingresar Site <span class="requerido">*</span> </label>
-                <input type="email" class="form-control" formControlName="site" id="unidad_responsable" maxlength="50">
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
-  </form>
-  <div class="row text-right">
-    <button [disabled]="!formulario_header.valid || !formulario_documentos.valid" class="btn btn-primary"
-      (click)="cargarDocumento()"> cargar </button>
   </div>
+
 </div>
+
+<ng-container *ngIf="formulario_header.valid && documento_papel">
+  <div class="col-sm-12 col-md-10 col-lg-8 mx-auto mt-2">
+    <div class="row">
+      <div class="col ">
+        <div class="card border border-info" style="width: auto; height: 100%;">
+          <div class="card-body">
+            <div class="row">
+              <app-header-comprobacion [formulario_header]="formulario_papel" [monedas]="lista_monedas"
+                *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
+              </app-header-comprobacion>
+              <app-conceptos-comprobacion [lista_conceptos]="lista_conceptos"
+                *ngIf="this.carga_documento.pdf !== null && this.carga_documento.pdf !== ''">
+              </app-conceptos-comprobacion>
+            </div>
+            <div class="form-row">
+              <button [disabled]=" !formulario_papel.valid || lista_conceptos.length == 0"
+                class="btn btn-primary ml-auto" (click)="cargarDocumentoExtranjero()">
+                cargar </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</ng-container>
