[add] Ramirez angel modal de detalle de nota de credito en la lista-notas-credito

--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -86,5 +86,6 @@
 </div>
 <app-modal-detalles-aprobacion *ngIf="lista_detalle_aprobacion" [detalleAprobacion]="lista_detalle_aprobacion">
 </app-modal-detalles-aprobacion>
-
+<app-modal-detalle-notas-credito *ngIf="detalle_notas_credito" [data]="detalle_notas_credito">
+</app-modal-detalle-notas-credito>
 <app-modal-cuenta *ngIf="notaSeleccionada" [nota_credito]="notaSeleccionada"></app-modal-cuenta>
