--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -15,7 +15,7 @@
               <th scope="" class="align-middle">Sucursal</th>
               <th scope="" class="align-middle">Usuario Acreedor</th>
               <th scope="" class="align-middle text-center">Estatus Aprobación </th>
-              <!-- <th scope="" class="align-middle">Estatus SAP</th> -->
+              <th scope="" class="align-middle">Estatus Oracle</th>
               <th scope="" class="align-middle">Fecha Contabilización</th>
               <th scope="" class="align-middle">Fecha Creación</th>
               <!-- <th scope="" class="align-middle">Folio SAP</th> -->
@@ -43,7 +43,7 @@
                   </span>
                 </div>
               </td>
-              <!-- <td> {{ item.estatus_sap_descripcion }} </td> -->
+              <td> {{ item.estatus_sap_descripcion }} </td>
               <td> {{ item.fecha_contabilizacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.fecha_creacion | date:'yyyy-MM-dd' }} </td>
               <!-- <td> {{ item.folio_sap }} </td> -->
