[add] modal detalles docs relacionados

--- a/src/app/compartidos/contenido/contenido.component.html
+++ b/src/app/compartidos/contenido/contenido.component.html
@@ -1,4 +1,4 @@
-<div class="contenedor-contenido" data-scrollbar="true" data-height="89%">
-    <!-- <div class="scroll-personalizado" style="height: 89.56%; overflow: auto"> -->
-    <router-outlet></router-outlet>
+<div class="contenedor-contenido">
+  <!-- <div class="scroll-personalizado" style="height: 89.56%; overflow: auto"> -->
+  <router-outlet></router-outlet>
 </div>
