--- a/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
+++ b/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
@@ -1,142 +1,173 @@
 <div class="modal fade" id="complementeto_detalle" tabindex="-1" role="dialog"
-  aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
+  aria-labelledby="exampleModalScrollableTitle" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document" data-backdrop="static"
+    data-keyboard="false">
     <div class="modal-content">
+
       <div class="modal-header">
-        <h5 class="modal-title" id="complementeto_detalleTitle">Documentos Realcionados</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <h5 class="modal-title" id="complementeto_detalleTitle"></h5>
+        <button type="button" class="close" (click)="cerrarModal()" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+      <ul class="nav nav-tabs nav-justified">
+        <li class="nav-item cursor-pointer">
+          <a (click)="setActivo('anexos')" [ngClass]="{'active': pestana_activa == 'anexos'}"
+            class="nav-link">Anexos</a>
+        </li>
+        <li class="nav-item cursor-pointer">
+          <a (click)="setActivo('documentos_relacionados')"
+            [ngClass]="{'active': pestana_activa == 'documentos_relacionados'}" class="nav-link">Documentos
+            Relacionados</a>
+        </li>
+        <li class="nav-item cursor-pointer">
+          <a (click)="setActivo('complementos_pago')" [ngClass]="{'active': pestana_activa == 'complementos_pago'}"
+            class="nav-link">Complemento de Pagos</a>
+        </li>
+        <li class="nav-item cursor-pointer">
+          <a (click)="setActivo('comprobaciones')" [ngClass]="{'active': pestana_activa == 'comprobaciones'}"
+            class="nav-link"> Comprobantes </a>
+        </li>
+      </ul>
+
 
       <div style="max-height: 500px; overflow-y: auto; ">
         <div class="modal-body">
-          <h4> Anexos </h4>
-          <button class="btn btn-primary my-1" (click)="mostrarModal()"> Agregar Anexo </button>
-          <div style="max-width: 100%; overflow-x: auto">
-            <table class="table">
-              <thead class="thead-dark">
-                <tr>
-                  <th scope="col "> # </th>
-                  <th scope="col">Nombre</th>
-                  <th scope="col">Extensión</th>
-                  <th scope="col">Acción</th>
-                </tr>
-              </thead>
-              <tbody>
-                <ng-container *ngIf="documentos_anexos.length > 0 ; else sinAnexos">
-                  <tr *ngFor="let anexo of documentos_anexos; let i = index;">
-                    <td> {{ i + 1 }} </td>
-                    <td> {{ anexo.nombre_archivo }} </td>
-                    <td> {{ anexo.extension }} </td>
-                    <td class="text-center">
-                      <button class="btn btn-sm btn-outline-primary" (click)="obtenerURl(anexo)"> <em
-                          class="far fa-file-pdf"></em> </button>
-                      <button target="_blank" href="" class="btn btn-sm text-danger"
-                        (click)="eliminarAnexo(anexo.id_anexo)">
-                        <em class="fas fa-trash"></em>
-                      </button>
-                    </td>
-                  </tr>
-                </ng-container>
-                <ng-template #sinAnexos>
-                  <tr>
-                    <td colspan=5 class="text-center">
-                      Sin Anexos.
-                    </td>
-                  </tr>
-                </ng-template>
-              </tbody>
-            </table>
-          </div>
-          <h4> Documento Relacionado</h4>
-          <div style="max-width: 100%; overflow-x: auto">
-            <table class="table">
-              <thead class="thead-dark">
-                <tr>
-                  <th scope="col">Folio Fiscal</th>
-                  <th scope="col">Tipo Relación</th>
-                  <th scope="col">Relación</th>
-                  <th scope="col">Subtotal</th>
-                  <th scope="col">Total</th>
-                </tr>
-              </thead>
-              <tbody>
-                <ng-container
-                  *ngIf="documentos_relacionados && documentos_relacionados.length > 0 ; else sinRelacionados">
-                  <tr *ngFor="let relacionado of documentos_relacionados">
-                    <td>{{ relacionado.folio_fiscal }} </td>
-                    <td> {{ relacionado.tipo_relacion }} </td>
-                    <td> {{ relacionado.relacion }} </td>
-                    <td> {{ relacionado.subtotal | currency : '$' }} </td>
-                    <td> {{ relacionado.total_factura | currency : '$' }} </td>
-                  </tr>
-                </ng-container>
-                <ng-template #sinRelacionados>
-                  <tr>
-                    <td colspan=5 class="text-center">
-                      Sin Documentos Relacionados.
-                    </td>
-                  </tr>
-                </ng-template>
-              </tbody>
-            </table>
-          </div>
-          <ng-container *ngIf="complementos_pago">
-            <h4>Complemento de Pago</h4>
-            <hr>
-            <p *ngIf="complementos_pago.folio_fiscal ">
-              Folio Fiscal: {{ complementos_pago.folio_fiscal }}
-            </p>
-            <p *ngIf="complementos_pago.monto !== 0">
-              Subtotal: {{ complementos_pago.monto | currency: '$' }} {{ complementos_pago.moneda }}
-            </p>
-            <p *ngIf="complementos_pago.forma_Pago">
-              Forma de Pago: {{ complementos_pago.forma_Pago }}
-            </p>
-            <p *ngIf="complementos_pago.fecha_pago !== '0001-01-01T00:00:00'">
-              Fecha de Pago: {{ complementos_pago.fecha_pago }}
-            </p>
-          </ng-container>
-          <div style="max-width: 100%; overflow-x: auto">
-            <table class="table">
-              <thead class="thead-dark">
-                <tr>
-                  <th scope="col">Folio Fiscal</th>
-                  <th scope="col">Método de Pago</th>
-                  <th scope="col">Número de Parcialidad</th>
-                  <th scope="col">Saldo Anterior</th>
-                  <th scope="col">Pagado</th>
-                  <th scope="col">Insoluto</th>
-                </tr>
-              </thead>
-              <tbody>
 
-                <ng-container
-                  *ngIf="complementos_pago && complementos_pago.detalles && complementos_pago.detalles.length > 0; else sinDocumentos">
-                  <tr *ngFor="let complemento of complementos_pago.detalles">
-                    <td> {{ complemento.folio_fiscal }} </td>
-                    <td> {{ complemento.metodo_pago }} </td>
-                    <td> {{ complemento.num_parcialidad }} </td>
-                    <td> {{ complemento.imp_saldo_ant | currency: '$' }} </td>
-                    <td> {{ complemento.imp_pagado | currency: '$' }} </td>
-                    <td> {{ complemento.imp_saldo_insoluto | currency: '$' }} </td>
-                  </tr>
-                </ng-container>
-                <ng-template #sinDocumentos>
+          <ng-container *ngIf="pestana_activa == 'anexos'">
+            <h4> Anexos </h4>
+            <button class="btn btn-primary my-1" (click)="mostrarModal()"> Agregar Anexo </button>
+            <div style="max-width: 100%; overflow-x: auto">
+              <table class="table">
+                <thead class="thead-dark">
                   <tr>
-                    <td class="text-center" colspan=6>
-                      Sin complementos de pago.
-                    </td>
+                    <th scope="col "> # </th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Extensión</th>
+                    <th scope="col">Acción</th>
                   </tr>
-                </ng-template>
-              </tbody>
-            </table>
-          </div>
+                </thead>
+                <tbody>
+                  <ng-container *ngIf="documentos_anexos.length > 0 ; else sinAnexos">
+                    <tr *ngFor="let anexo of documentos_anexos; let i = index;">
+                      <td> {{ i + 1 }} </td>
+                      <td> {{ anexo.nombre_archivo }} </td>
+                      <td> {{ anexo.extension }} </td>
+                      <td class="text-center">
+                        <button class="btn btn-sm btn-outline-primary" (click)="obtenerURl(anexo)"> <em
+                            class="far fa-file-pdf"></em> </button>
+                        <button target="_blank" href="" class="btn btn-sm text-danger"
+                          (click)="eliminarAnexo(anexo.id_anexo)">
+                          <em class="fas fa-trash"></em>
+                        </button>
+                      </td>
+                    </tr>
+                  </ng-container>
+                  <ng-template #sinAnexos>
+                    <tr>
+                      <td colspan=5 class="text-center">
+                        Sin Anexos.
+                      </td>
+                    </tr>
+                  </ng-template>
+                </tbody>
+              </table>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="pestana_activa == 'documentos_relacionados'">
+            <h4> Documento Relacionado</h4>
+            <div style="max-width: 100%; overflow-x: auto">
+              <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">Folio Fiscal</th>
+                    <th scope="col">Tipo Relación</th>
+                    <th scope="col">Relación</th>
+                    <th scope="col">Subtotal</th>
+                    <th scope="col">Total</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <ng-container
+                    *ngIf="documentos_relacionados && documentos_relacionados.length > 0 ; else sinRelacionados">
+                    <tr *ngFor="let relacionado of documentos_relacionados">
+                      <td>{{ relacionado.folio_fiscal }} </td>
+                      <td> {{ relacionado.tipo_relacion }} </td>
+                      <td> {{ relacionado.relacion }} </td>
+                      <td> {{ relacionado.subtotal | currency : '$' }} </td>
+                      <td> {{ relacionado.total_factura | currency : '$' }} </td>
+                    </tr>
+                  </ng-container>
+                  <ng-template #sinRelacionados>
+                    <tr>
+                      <td colspan=5 class="text-center">
+                        Sin Documentos Relacionados.
+                      </td>
+                    </tr>
+                  </ng-template>
+                </tbody>
+              </table>
+            </div>
+          </ng-container>
+
+          <ng-container *ngIf="pestana_activa == 'complementos_pago'">
+            <ng-container *ngIf="complementos_pago">
+              <h4>Complemento de Pago</h4>
+              <hr>
+              <p *ngIf="complementos_pago.folio_fiscal ">
+                Folio Fiscal: {{ complementos_pago.folio_fiscal }}
+              </p>
+              <p *ngIf="complementos_pago.monto !== 0">
+                Subtotal: {{ complementos_pago.monto | currency: '$' }} {{ complementos_pago.moneda }}
+              </p>
+              <p *ngIf="complementos_pago.forma_Pago">
+                Forma de Pago: {{ complementos_pago.forma_Pago }}
+              </p>
+              <p *ngIf="complementos_pago.fecha_pago !== '0001-01-01T00:00:00'">
+                Fecha de Pago: {{ complementos_pago.fecha_pago }}
+              </p>
+            </ng-container>
+            <div style="max-width: 100%; overflow-x: auto">
+              <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">Folio Fiscal</th>
+                    <th scope="col">Método de Pago</th>
+                    <th scope="col">Número de Parcialidad</th>
+                    <th scope="col">Saldo Anterior</th>
+                    <th scope="col">Pagado</th>
+                    <th scope="col">Insoluto</th>
+                  </tr>
+                </thead>
+                <tbody>
+
+                  <ng-container
+                    *ngIf="complementos_pago && complementos_pago.detalles && complementos_pago.detalles.length > 0; else sinDocumentos">
+                    <tr *ngFor="let complemento of complementos_pago.detalles">
+                      <td> {{ complemento.folio_fiscal }} </td>
+                      <td> {{ complemento.metodo_pago }} </td>
+                      <td> {{ complemento.num_parcialidad }} </td>
+                      <td> {{ complemento.imp_saldo_ant | currency: '$' }} </td>
+                      <td> {{ complemento.imp_pagado | currency: '$' }} </td>
+                      <td> {{ complemento.imp_saldo_insoluto | currency: '$' }} </td>
+                    </tr>
+                  </ng-container>
+                  <ng-template #sinDocumentos>
+                    <tr>
+                      <td class="text-center" colspan=6>
+                        Sin complementos de pago.
+                      </td>
+                    </tr>
+                  </ng-template>
+                </tbody>
+              </table>
+            </div>
+          </ng-container>
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" (click)="cerrarModal()">Cerrar</button>
       </div>
     </div>
   </div>
