--- a/src/app/modulos/notas-credito/filtro-notas-credito/filtro-notas-credito.component.html
+++ b/src/app/modulos/notas-credito/filtro-notas-credito/filtro-notas-credito.component.html
@@ -1,5 +1,5 @@
 <div id="content" class="row">
-  <div class="panel-heading" style="padding: 10px !Important;">
+  <div class="panel-heading col" style="padding: 10px !Important;">
     <button id="filtroConsulta" class="btn btn-primary mb-2 " type="button" data-toggle="collapse"
       data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       Filtrar Consulta
