--- a/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
+++ b/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
@@ -21,7 +21,7 @@
 
 <app-detalle-complementos [documento_cfdi]="documento_seleccionado" [documentos_anexos]="documentos_anexos"
   [identificador_corporativo]="identificador_corporativo" [complementos_pago]="complementos_pago"
-  [documentos_relacionados]="documentos_relacionados">
+  [documentos_relacionados]="documentos_relacionados" [lista_comprobantes]='lista_comprobantes'>
 </app-detalle-complementos>
 
 
