--- a/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
+++ b/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
@@ -55,7 +55,7 @@
                       <td> {{ anexo.extension }} </td>
                       <td class="text-center">
                         <button class="btn btn-sm btn-outline-primary" (click)="obtenerURl(anexo)"> <em
-                            class="far fa-file-pdf"></em> </button>
+                            class="fas fa-file-download"></em> </button>
                         <button target="_blank" href="" class="btn btn-sm text-danger"
                           (click)="eliminarAnexo(anexo.id_anexo)">
                           <em class="fas fa-trash"></em>
