[add] ti[po documento en listar cfdi

--- a/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
+++ b/src/app/modulos/listar-cfdi/detalle-complementos/detalle-complementos.component.html
@@ -93,7 +93,7 @@
                       <td> {{ comprobante.nombre_archivo }} </td>
                       <td> {{ comprobante.extension }} </td>
                       <td class="text-center">
-                        <button class="btn btn-sm btn-outline-primary" (click)="obtenerURl(comprobante)"> <em
+                        <button class="btn btn-sm btn-outline-primary" (click)="obtenerComprobante(comprobante)"> <em
                             class="far fa-file-pdf"></em> </button>
                         <button target="_blank" href="" class="btn btn-sm text-danger"
                           (click)="eliminarComprobante(comprobante.id_anexo)">
