--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -31,6 +31,13 @@
             </select2>
           </div>
           <div class="col-md-3 col-lg-3">
+            <label class="label-control" for="documento">Tipo de Documento</label>
+            <select2 [data]="lista_documentos" [value]="tipo_doc_mov_default"
+              [options]="{placeholder: 'Seleccione una Tipo de Documento'}" (valueChanged)="selectTipoDocumento($event)"
+              name="documento" id="documento">
+            </select2>
+          </div>
+          <div class="col-md-3 col-lg-3">
             <label class="label-control" for="orden_compra">Orden de Compra</label>
             <input type="text" class="form-control" id="orden_compra" formControlName="orden_compra"
               [(ngModel)]="filtroConsulta.orden_compra" placeholder="Orden de Compra" name="orden_compra">
